assets/css/screen.less
/* ... */
    body * {
        max-height: 1000000em
    }

h1, h2, h3, h4, p, li, dt, dd {
    font-family: @baseFontFamily;
}

h1, .post-meta {
    text-align: center
}

a, a:visited {
    color: @linkColor;
    text-decoration: none;
    transition: color ease 0.7s;
    -webkit-transition: color ease 0.7s;
}

a:focus, a:hover {
    color: @linkColorHover;
}

p, li, dt, dd {
    font-size: 18px;
    font-weight: 100;
    line-height: 30px;
}

dt {
    font-weight: 400
}

li {
    padding-left: .8em
}

pre {
    font-family: @preFontFamily;
    font-size: 1em;
    line-height: 1.2em;
    padding: 1em;
    white-space: pre;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
    background-color: @codeColor;
}

p code {
    font-family: @preFontFamily;
    // font-size: .8em;
    line-height: 1.2em;
    font-weight: bold;
}

h1 {
    color: @headerFontColor;
    font-family: @headerFontFamily;
    font-size: 36px;
    font-weight: 400;
    line-height: 42px;
    margin: 0;
    padding: 0;
}

#site-head, article, article.preview, a.archive-link, .article-nav {
    margin: 20px auto;
    max-width: @maxPageWidth;
    width: 90%;
}

    #site-head img {
        max-width: 100%
    }

article.preview {
    margin-bottom: 4em;
    p.readmore {
      font-family: "Open Sans Condensed", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
      margin-top: 1em;
      text-transform: uppercase;
      font-weight: 400;
    }
}

#site-head.internal {
    img {
        width: 20%;
        vertical-align:middle;
    }

    h1.blog-title{
        margin-bottom: 1em;
    }

    h1.blog-title a{
        font-size:0.7em;
    }
}

/* === Header === */

#blog-logo {
    display: block;
    max-width: 100px;
    margin: 0 auto 0;
    text-align: center;
    div.bloglogo {
      width: 100px;
      height: 100px;
      border-radius: 50%;
      background-size: cover !important;
      background-position: center center !important;
      background-color: @bodyBackgroundColor;
    }
}

h1.blog-title, h2.blog-description {
    text-align: center
}

h1.blog-title {
    font-size: 48px;
    line-height: 52px;
    margin-top: 10px;
    margin-bottom: 0;
    padding: 0;
}

h2.blog-description {
    margin-bottom: 1em;
    margin-top: 0px;
    padding: .5em 1em;
    line-height: 1.2em;
}

section.footer-description {
    margin-bottom: 1em;
}

header.article-header, header.page-header {
    margin-bottom: 3em
}

/* === Body === */

section.author, section.share {
    width: 100%;
    text-align: left;
    text-transform: none;
}

section.share {
    margin-top: 1em;
    border-top: 1px solid @borderColor;
    padding-top: 1em;
    text-align: right;
}

    section.author h4, section.author p, section.share p {
        padding: 0;
        margin: 0;
    }

section.author h4 {
    font-family: @headerFontFamily;
    font-weight: 400;
    margin-bottom: 4px;
}

section.author p.attr, section.share p.info {
    font-size: 16px;
    line-height: 20px;
    text-transform: uppercase;
    font-family: @secondaryFontFamily;
}

section.share p.info.prompt {
    top: -5px;
    position: relative;
}

section.author p.attr {
    margin-bottom: 2px
}

section.share p.info {
    display: inline-block
}

section.author p.bio {
    font-size: 16px;
    margin-left: 82px;
    line-height: 1.4em;
}

blockquote {
    font-family: @secondaryFontFamily;
    font-size: 1.6em;
    font-weight: 300;
    line-height: 1.2em;
    font-style: italic;
    text-transform: uppercase;
    border-left: .5em solid @subtleColor;
    margin-left: 1em;
    padding-left: 1em;
}

    blockquote p {
        font-family: @secondaryFontFamily;
        font-size: 1.6em;
        font-weight: 300;
        line-height: 1.2em;
        font-style: italic;
        text-transform: uppercase;
    }

.post-meta {
    color: @postmetaColor;
    font-family: @secondaryFontFamily;
    font-size: 20px;
    font-weight: 300;
    margin-top: 1em;
    margin-bottom: 0;
    text-transform: uppercase;
}

.tags {
    font-size: 16px;
    margin-bottom: 2em;
    margin-top:0;
}

div.authorimage {
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-size: cover !important;
  background-position: center center !important;
  margin-right: 10px;
  float: left;
}

h1.post-title a, h1.blog-title a {
    color: @headerLinkColor;
    transition: color ease 0.7s;
    -webkit-transition: color ease 0.7s;
}

h1.post-title a:focus, h1.post-title a:hover, h1.blog-title a:focus, h1.blog-title a:hover {
    color: @linkColor;
    text-decoration: none;
}

h2 {
    font-family: @secondaryFontFamily;
    margin-top: 2em;
    text-transform: uppercase;
    font-weight: 300;
}

section.post-content img {
    display: block;
    margin: 0 auto;
    max-width: 100%;
}

section.preview.archive h2 {
    text-align: left
}

section.author {
    overflow: hidden
}

img.userimage {
    width: 70px;
    max-width: 70px;
    max-height: 70px;
    border-radius: 50%;
    margin-right: 10px;
    float: left;
}

/* === Footer === */

footer {
    background: @subtleColor;
    margin: 4em 0 0;
    padding: 2em 0;
    text-align: center;
}

    footer section {
        font-family: @secondaryFontFamily;
        font-weight: 300;
        font-size: 18px;
        margin: 0 auto;
        max-width: 600px;
        text-transform: uppercase;
        width: 90%;
    }

footer.post-footer {
    background: none;
    border-top: 1px solid @borderColor;
    margin-top: 1em;
}
/* ... */

